--- a/index.html
+++ b/index.html
@@ -109,9 +109,18 @@
 
     /* Logo statt buntem Kreis */
     .logo{
-  width: 1300px;     /* Größe */
-  height: auto;    /* Proportionen behalten */
+  width: 100%;
+  max-width: 600px;   /* Desktop-Größe */
+  height: auto;
   max-height: 240px;
+
+  object-fit: contain;
+  border-radius: 16px;
+  box-shadow: var(--card-shadow);
+  background: #fff;
+  border: 1px solid rgba(0,0,0,.06);
+  padding: 8px;
+}
 
   object-fit: contain;
   border-radius: 16px;
@@ -318,6 +327,18 @@
       background: rgba(0,0,0,.08);
       margin: 18px 0;
     }
+@media (max-width: 600px){
+  .logo{
+    max-width: 90%;
+    max-height: 140px;
+    padding: 6px;
+  }
+
+  .brand{
+    flex-direction: column;
+    align-items: flex-start;
+  }
+}
   </style>
 </head>
 
