--- a/index.html
+++ b/index.html
@@ -440,30 +440,7 @@
             </ul>
           </div>
 
-          <div class="card">
-            <h2>Vorstand & Bankverbindung</h2>
-
-            <h3>Ansprechpartner des Vorstandes</h3>
-            <ul class="info-list">
-              <li><b>1. Vorsitzender:</b> Michael Neumann (Schmetterlingsgruppe)</li>
-              <li><b>2. Vorsitzende:</b> Isabella Bärtling (Schmetterlingsgruppe)</li>
-              <li><b>Kassenwärtin:</b> Ina Felgendreher (Hasengruppe)</li>
-              <li><b>Schriftführerin:</b> Teresa Reimann (Schmetterlingsgruppe)</li>
-              <li><b>Kassenprüfer:</b> Trine Kachel (Hasengruppe), André Stade (Schmetterlingsgruppe)</li>
-            </ul>
-
-            <div class="divider"></div>
-
-            <h3>Bankverbindung</h3>
-            <p class="lead" style="margin-top:6px;">
-              Volksbank Osnabrück eG<br/>
-              IBAN: DE81265900251020670100<br/>
-              BIC: GENODEF10SV
-            </p>
-          </div>
-        </div>
-      </section>
-
+          
       <section id="flohmarkt">
         <div class="card">
           <h2>Flohmarkt – Infos</h2>
@@ -485,7 +462,8 @@ Ob gut erhaltene Kinderkleidung, Spielzeug, Bücher oder kleine Schätze – hie
                 <li><b>Datum:</b> <span id="eventDateText">30.05.2026</span></li>
                 <li><b>Uhrzeit:</b> <span id="eventTimeText">10:00 – 15:00 Uhr</span></li>
 		<li><b>Standgebühr</b> 10€ pro Tisch zugunsten des Fördervereins (Tische werden gestellt) </li>
-		<li><b>Anzahl der Stände:</b> 25</li>
+		<li><b>Anzahl der Stände:</b> 50</li>
+		<li><b>Anmeldeschluss:</b> 15.05.2026</li>
 		<p><li><b>Schlechtwetterregelung:</b> Bei schlechtem Wetter wird der Flohmarkt verschoben. Aktuelle Infos dazu findet ihr hier auf der Website.</li>
               </ul>
             </div>
@@ -569,19 +547,15 @@ Ob gut erhaltene Kinderkleidung, Spielzeug, Bücher oder kleine Schätze – hie
 
           <p>
             <b>Telefon:</b> 0541 / 350 6351<br/>
-            <b>E-Mail:</b> y.thyes@gmx.de
+            <b>E-Mail:</b> flohmark-st-johann@web.de
           </p>
 
           <p>
-            <b>Vertretungsberechtigt (Vorstand):</b><br/>
-            1. Vorsitzender: Michael Neumann<br/>
-            2. Vorsitzende: Isabella Bärtling
+            <b>Kontaktpersonen Förderverein:</b><br/>
+             Michael Neumann<br/>
+            Isabella Bärtling
           </p>
 
-          <p>
-            <b>Vereinsregister:</b> [Amtsgericht / Registergericht eintragen]<br/>
-            <b>Registernummer:</b> [Registernummer eintragen]
-          </p>
 
           <p>
             <b>Inhaltlich verantwortlich:</b><br/>
@@ -625,7 +599,7 @@ Ob gut erhaltene Kinderkleidung, Spielzeug, Bücher oder kleine Schätze – hie
             Förderverein Kita St. Johann e. V.<br/>
             Am Landgericht 3, 49074 Osnabrück<br/>
             Tel.: 0541 / 350 6351<br/>
-            E-Mail: y.thyes@gmx.de
+            E-Mail: flohmarkt-st-johann@web.de
           </p>
 
           <h3>2. Hosting</h3>
