--- a/index.html
+++ b/index.html
@@ -413,7 +413,7 @@
       </header>
 
       <section id="foerderverein">
-        <div class="grid2">
+      
           <div class="card">
             <h2>Über den Förderverein</h2>
             <p class="lead">
@@ -440,6 +440,7 @@
             </ul>
           </div>
 
+</section>
           
       <section id="flohmarkt">
         <div class="card">
@@ -670,7 +671,7 @@ Ob gut erhaltene Kinderkleidung, Spielzeug, Bücher oder kleine Schätze – hie
 
     // Anzeige im Flohmarkt-Block (optional anpassen)
     document.getElementById("eventDateText").textContent = "30.05.2026";
-    document.getElementById("eventTimeText").textContent = "10:00 – 14:00 Uhr";
+    document.getElementById("eventTimeText").textContent = "10:00 – 15:00 Uhr";
 
     // ========= Countdown =========
     const eventTime = new Date(EVENT_DATETIME).getTime();
