--- a/index.html
+++ b/index.html
@@ -522,6 +522,7 @@ Ob gut erhaltene Kinderkleidung, Spielzeug, Bücher oder kleine Schätze – hie
     <option value="Krippe">Krippe</option>
     <option value="Freunde/Bekannte">Freunde / Bekannte</option>
     <option value="Aushang">Aushang</option>
+<option value="Klecks">Klecks</option>
     <option value="Internet">Internet</option>
     <option value="Sonstiges">Sonstiges</option>
   </select>
