--- a/index.html
+++ b/index.html
@@ -468,7 +468,7 @@ Ob gut erhaltene Kinderkleidung, Spielzeug, Bücher oder kleine Schätze – hie
 		<li><b>Art:</b> Flohmarkt im Außenbereich</li>
                 <li><b>Datum:</b> <span id="eventDateText">30.05.2026</span></li>
                 <li><b>Uhrzeit:</b> <span id="eventTimeText">10:00 – 15:00 Uhr</span></li>
-		<li><b>Standgebühr</b> 10€ pro Tisch zugunsten des Fördervereins (Tische werden gestellt) </li>
+		<li><b>Standgebühr</b> 10€ pro Tisch zugunsten des Fördervereins (Tische werden gestellt), Bezahlung bis 14 Tage nach Anmeldung </li>
 		<li><b>Anzahl der Stände:</b> 50</li>
 		<li><b>Anmeldeschluss:</b> 15.05.2026</li>
 		<p><li><b>Schlechtwetterregelung:</b> Bei schlechtem Wetter wird der Flohmarkt verschoben. Aktuelle Infos dazu findet ihr hier auf der Website.</li>
