--- a/index.html
+++ b/index.html
@@ -694,6 +694,30 @@
               <img src="gemüsegärtner.png" alt="die Gemüsegärtner" loading="lazy">
             </a>
 
+	<a class="sponsor" href="https://www.foto-erhardt.de/" target="_blank" rel="noopener">
+              <img src="fotoerhardt.png" alt="Foto Erhardt" loading="lazy">
+            </a>
+
+	<a class="sponsor" href="https://www.johanniter.de/juh/lv-ndsbr/rv-weser-ems/unsere-standorte-einrichtungen-in-weser-ems/einrichtungen-detailseite/ortsverband-osnabrueck-556/" target="_blank" rel="noopener">
+              <img src="johanniter.png" alt="Johanniter" loading="lazy">
+            </a>
+
+	<a class="sponsor" href="https://www.westermann.de/" target="_blank" rel="noopener">
+              <img src="westermann.png" alt="Westermann" loading="lazy">
+            </a>
+
+	<a class="sponsor" href="https://www.kalkriese-varusschlacht.de/" target="_blank" rel="noopener">
+              <img src="varusschlacht.png" alt="Varusschlacht Kalkriese" loading="lazy">
+            </a>
+
+	<a class="sponsor" href="https://www.waldbuehne-melle.com/" target="_blank" rel="noopener">
+              <img src="waldbühnemelle.png" alt="Waldbühne Melle" loading="lazy">
+            </a>
+
+	<a class="sponsor" href="https://waldbühne.com/" target="_blank" rel="noopener">
+              <img src="waldbühneoesede.png" alt="Waldbühne Kloster Oesede" loading="lazy">
+            </a>
+
             <!-- Neues Logo = einfach diesen Block kopieren -->
             <!--
             <a class="sponsor" href="https://firma4.de" target="_blank" rel="noopener">
